# OpenAgentLoop

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/openloop/: __init__.py  cli.py  models.py
src/openloop/collectors/: __init__.py  input.py
src/openloop/compilers/: __init__.py  claude_code.py  codex.py  opencode.py
src/openloop/generators/: __init__.py  repair.py  review.py  work_order.py
src/openloop/linting/: __init__.py  rules.py
src/openloop/trace/: __init__.py  writer.py
src/openloop/utils/: __init__.py  text.py
tests/: test_cli.py  test_compilers.py  test_linting.py  test_models.py  test_repair_review.py  test_trace.py  test_work_order_generation.py
